[package]
name = "cummer-os"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
pc-keyboard = "0.5.0"
bootloader = "0.9.8"
pic8259 = "0.10.1"
volatile = "0.2.6"
x86_64 = "0.14.2"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
